# swasth

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.node.json
frontend/src/: main.tsx
frontend/src/components/layout/: AppShell.tsx
frontend/src/components/ui/: button.tsx  statusBadge.tsx
frontend/src/hooks/: useLanguage.ts
frontend/src/lib/: api.ts  mockData.ts  types.ts  utils.ts
frontend/src/pages/: ResultsPage.tsx  UploadPage.tsx
src/backend/: README.md  analysis.py  api_keys.py  docs.md  endpoints.md  external_data.py  extract.py  function_log.py  llm.py  main.py  measurements.py  pyproject.toml  user_info_db.py  user_medical_info.py
src/backend/rag/: config.py  corpus.py  index_blood_corpus.py
src/frontend/: eslint.config.js  index.html  package-lock.json  readme.md
src/frontend/public/assets/samples/: user-1-profile.json  user-2-profile.json
src/frontend/src/: App.tsx  i18n.ts  styles.css
src/frontend/src/components/diet/: MealCard.tsx
src/frontend/src/components/history/: Timeline.tsx  TrendChart.tsx
src/frontend/src/components/layout/: AppShell.tsx  LanguageSwitcher.tsx
src/frontend/src/components/results/: PanelSection.tsx  ValueCard.tsx
src/frontend/src/components/ui/: card.tsx  progress.tsx
src/frontend/src/lib/: api.ts  mockData.ts  sampleProfiles.ts  types.ts
src/frontend/src/locales/en/: common.json
src/frontend/src/pages/: DietPlanPage.tsx  HistoryPage.tsx  OnboardingPage.tsx  ResultsPage.tsx  UploadPage.tsx
(+2 files in other folders)
