[project]
name = "medisum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.45.0",
    "pymupdf>=1.28.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "rich>=15.0.0",
    "tqdm>=4.68.4",
]
