[project]
name = "medisum"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.139.2",
    "openai>=2.45.0",
    "pymupdf>=1.28.0",
    "python-multipart>=0.0.32",
    "requests>=2.34.2",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "rich>=15.0.0",
    "tqdm>=4.68.4",
]
